# go2_webrtc_connect

./: .gitignore  .gitmodules  Mechatronisches-Projekt.md  README.md  README_Jetson-setup.md  aruco_follow.md  flake.nix  macos.md  pyproject.toml  requirements.txt  setup.py
examples/audio/internet_radio/: stream_radio.py
examples/audio/live_audio/: live_recv_audio.py
examples/audio/mp3_player/: play_mp3.py  webrtc_audio_player.py
examples/audio/save_audio/: save_audio_to_file.py
examples/data_channel/lidar/: README.md  lidar_stream.py  plot_lidar_stream.py
examples/data_channel/lowstate/: lowstate.py
examples/data_channel/multiplestate/: multiplestate.py
examples/data_channel/sportmode/: move.py  sportmode.py
examples/data_channel/sportmodestate/: sportmodestate.py
examples/data_channel/vui/: vui.py
examples/hse/: aruco_follow.py  dog.py  ost.yaml  robot_visual_assist.py
examples/marker_following/: 04_show_movement_direction.py  04_show_movement_direction_solution.py
examples/video/camera_stream/: display_video_channel.py  test_cv.py
go2_webrtc_driver/: __init__.py  constants.py  encryption.py  multicast_scanner.py  unitree_auth.py  util.py  webrtc_audio.py  webrtc_audiohub.py  webrtc_datachannel.py  webrtc_driver.py  webrtc_video.py
go2_webrtc_driver/lidar/: lidar_decoder_libvoxel.py  lidar_decoder_native.py  lidar_decoder_points.py  lidar_decoder_unified.py
go2_webrtc_driver/msgs/: error_handler.py  future_resolver.py  heartbeat.py  pub_sub.py  rtc_inner_req.py  validation.py
